--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,15 @@
 @theme {
   /* --color-primary: #783141; */
   --color-primary: oklch(92.4% 0.12 95.746);
+  --color-primary-dark: oklch(72.4% 0.22 95.746);
+}
+
+body {
+  @apply bg-white dark:bg-amber-100;
 }
 
 @layer components {
   .base-panel {
-    @apply bg-primary rounded-2xl;
+    @apply bg-primary dark:bg-primary-dark rounded-2xl;
   }
 }
